# lok-sabha-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT.md  README.md  RECIPES.md  docker-compose.yml  main.py  pyproject.toml
data/18/: index_session_2.jsonl  index_session_7.jsonl  loksabha_sessions.json  members.json  ministries.json
data/sample/18/: index_session_7.jsonl
data/sample/18/chunks/session_7/: chunks.jsonl
docs/: ARCHITECTURE.md  BACKEND.md  DATA_PIPELINE.md  FRONTEND.md  RETRIEVAL_STRATEGY.md
frontend/: app.js  index.html  styles.css
scripts/: compare_ocr.py  create_sample_data.py  docker-entrypoint.sh  publish_rag_data.sh  setup.sh  snapshot.sh
src/lok_sabha_rag/: config.py
src/lok_sabha_rag/api/: main.py  schemas.py
src/lok_sabha_rag/api/routes/: debug.py  members.py  ministries.py  question_text.py  search.py  stats.py  synthesize.py
src/lok_sabha_rag/core/: retriever.py  stats.py  synthesizer.py
src/lok_sabha_rag/pipeline/: build_chunks.py  build_chunks_bge.py  build_metadata_db.py  curate_ls_metadata.py  download_pdfs.py  embed.py  embed_index_qdrant2.py  extract_text.py
src/lok_sabha_rag/prompts/: system.txt  user.txt
tests/: test_indexing.py  test_retrieval.py
