[project]
name = "lok-sabha-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "fastapi>=0.129.0",
    "huggingface-hub>=0.25.0",
    "openai>=2.21.0",
    "python-dotenv>=1.0.0",
    "qdrant-client[fastembed]>=1.16.2",
    "sse-starlette>=3.2.0",
    "tqdm>=4.60.0",
    "typer>=0.21.2",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lok_sabha_rag"]
